Modulo Turma add

--- a/admin/include/menu.phtml
+++ b/admin/include/menu.phtml
@@ -39,7 +39,17 @@
 	</div>
 
 	<div class="menu-item">Critérios <i class="fa fa-list-ol fa-fw fa-lg icon"></i></div>
-	<div class="menu-item">Turmas <i class="fa fa-users fa-fw fa-lg icon"></i></div>
+	
+	
+	<div class="menu-item-dropdown">
+		<div class="menu-item">Turma <i class="fa fa-users fa-fw fa-lg icon"></i></div>
+		<ul class="menu-dropdown">
+			<li><a class="item" href="?page=turma">Gerenciar turmas</a></li>
+			<li><a class="item" href="?page=turma&action=cadastrar">Cadastrar turma</a></li>
+		</ul>
+	</div>
+
+
 	<div class="menu-item">Cursos <i class="fa fa-book fa-fw fa-lg icon"></i></div>
 	<div class="menu-item">Usuários <i class="fa fa-user fa-fw fa-lg icon"></i></div>
 	<div class="menu-item">Recursos <i class="fa fa-clipboard fa-fw fa-lg icon"></i></div>
