--- a/admin/include/menu.phtml
+++ b/admin/include/menu.phtml
@@ -49,8 +49,14 @@
 		</ul>
 	</div>
 
+	<div class="menu-item-dropdown">
+		<div class="menu-item">Cursos <i class="fa fa-book fa-fw fa-lg icon"></i></div>
+		<ul class="menu-dropdown">
+			<li><a class="item" href="?page=curso">Gerenciar cursos</a></li>
+			<li><a class="item" href="?page=curso&action=cadastrar">Cadastrar curso</a></li>
+		</ul>
+	</div>
 
-	<div class="menu-item">Cursos <i class="fa fa-book fa-fw fa-lg icon"></i></div>
 	<div class="menu-item">Usuários <i class="fa fa-user fa-fw fa-lg icon"></i></div>
 	<div class="menu-item">Recursos <i class="fa fa-clipboard fa-fw fa-lg icon"></i></div>
 	<div class="menu-item">Pagamentos <i class="fa fa-usd fa-fw fa-lg icon"></i></div>
