Módulo Auxílio adicionado.

--- a/admin/include/menu.phtml
+++ b/admin/include/menu.phtml
@@ -18,8 +18,15 @@
 			<li><a class="item" href="?page=aluno&action=cadastrar">Cadastrar aluno</a></li>
 		</ul>
 	</div>
-	
-	<div class="menu-item">Auxílios <i class="fa fa-cutlery fa-fw fa-lg icon"></i></div>
+
+	<div class="menu-item-dropdown">
+		<div class="menu-item">Auxílios <i class="fa fa-cutlery fa-fw fa-lg icon"></i></div>
+		<ul class="menu-dropdown">
+			<li><a class="item" href="?page=auxilio">Gerenciar auxílios</a></li>
+			<li><a class="item" href="?page=auxilio&action=cadastrar">Cadastrar auxílio</a></li>
+		</ul>
+	</div>
+
 	<div class="menu-item">Processos <i class="fa fa-file-text fa-fw fa-lg icon"></i></div>
 
 	<div class="menu-item-dropdown">
